--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    
+    
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.7.1</version>
+</dependency>
   </dependencies>
 
   <build>
